remove "mixed" results

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "bun --hot src/index.ts",
     "start": "bun src/index.ts",
     "script:remove-permanently-closed": "bun scripts/remove-permanently-closed.ts",
-    "script:remove-law-enforcement": "bun scripts/remove-law-enforcement.ts"
+    "script:remove-law-enforcement": "bun scripts/remove-law-enforcement.ts",
+    "script:mark-exportable": "bun scripts/mark-exportable.ts"
   },
   "devDependencies": {
     "@types/bun": "latest"
