--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
+DATABASE_URL=postgresql://user:password@localhost:5432/pantry_search
 OPENAI_API_KEY=your_openai_api_key_here
 GOOGLE_MAPS_KEY_API=your_google_maps_key_here
+JINA_API_KEY=your_jina_api_key_here
